# equisight-backend

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  auth.py  backend-features.md  database.py  equisight-backend.db  main.py  models.py  pyproject.toml  schemas.py  services.py
analysis/: analysis_services.py
analysis/fundamental/: dcf.py  graham.py
analysis/relative/: reversedcf.py
routers/: backtester.py  forex.py  ticker.py  user.py  valuation.py  watchlist.py
tests/: conftest.py  test_auth.py  test_ticker.py  test_watchlist.py
