[project]
name = "equisight-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pre-commit>=4.2.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.34.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]

[tool.poe]
executor.type = "uv"

[tool.poe.tasks]
format = "ruff format"
check = "ruff check"
lint = ["format", "check"]
