[project]
name = "equisight-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "exchange-calendars>=4.10.1",
    "fastapi-users[jwt,sqlalchemy]>=14.0.1",
    "fastapi[standard]>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=4.2.0",
    "pyjwt>=2.10.1",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
    "yfinance>=0.2.61",
]

[dependency-groups]
dev = [
    "poethepoet>=0.34.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]

[tool.poe]
executor.type = "uv"

[tool.poe.tasks]
format = "ruff format"
check = "ruff check"
lint = ["format", "check"]
dev = "uvicorn main:app --reload"
